<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardde"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_image"
                    android:layout_width="@dimen/perfil_image_size"
                    android:layout_height="@dimen/perfil_image_size"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:border_color="@android:color/white"
                    app:border_width="1dp" />

                <LinearLayout
                    android:layout_width="@dimen/bofab"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                <!-- Etiqueta Amigos -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/textTamaño"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/versiona"
                    android:textSize="@dimen/textTamaño"
                    android:textColor="@color/accentColor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />



                    </LinearLayout>



                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_like"
                    app:borderWidth="0dp"
                     />


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textTamaño"
                    android:text="@string/reseña"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textTamaño"
                    android:text="@string/reseña2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textTamaño"
                    android:text="@string/codigoapp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/textTamaño"
                    android:text="@string/paramasinf"/>

            </LinearLayout>
        </LinearLayout>





    </android.support.v7.widget.CardView>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_developer"
        android:id="@+id/imagede"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/developer"
    android:textSize="@dimen/textTamaño"
    android:textColor="#000"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtcontacto"
        android:text="@string/cont"
        android:textStyle="italic"
        android:textSize="@dimen/textTamaño"
        android:textColor="@color/accentColor"
        />

    </LinearLayout>

</LinearLayout>
    <View
        android:layout_width="10sp"
        android:layout_height="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="10sp"
            android:layout_height="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagram"
            android:id="@+id/image"/>
        <View
            android:layout_width="10sp"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:id="@+id/instagram"
            android:textSize="@dimen/textTamaño"
            android:textColor="@color/accentColor"
            />

    </LinearLayout>
    <View
        android:layout_width="10sp"
        android:layout_height="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="10sp"
            android:layout_height="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:id="@+id/imag"/>
        <View
            android:layout_width="10sp"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:id="@+id/facebook"
            android:textSize="@dimen/textTamaño"
            android:textColor="@color/accentColor"
            />

    </LinearLayout>





</LinearLayout>
