<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoa">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <View
        android:layout_width="200sp"
        android:layout_height="20sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/card2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Valor_Ra"
                    android:textSize="@dimen/textTamaño"
                    android:id="@+id/textView7" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/R1"
                    android:layout_weight="4"
                    android:textSize="@dimen/textTamaño"
                    android:background="@drawable/fondob"/>

            </LinearLayout>
            <View
                android:layout_width="300sp"
                android:layout_height="15sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Valor_Rb"
                    android:id="@+id/textView8"
                    android:textSize="@dimen/textTamaño"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/R2"
                    android:layout_weight="1"
                    android:textSize="@dimen/textTamaño"
                    android:background="@drawable/fondob"/>
            </LinearLayout>

            <View
                android:layout_width="300sp"
                android:layout_height="15sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Valor_Rc"
                    android:id="@+id/textView9"
                    android:textSize="@dimen/textTamaño"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/R3"
                    android:layout_weight="1"
                    android:textSize="@dimen/textTamaño"
                    android:background="@drawable/fondob"/>
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@+id/card2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textTamaño"
            android:text="@string/calcular"
            android:id="@+id/btn1"
            android:background="@drawable/fondoc"/>
        <View
            android:layout_width="20sp"
            android:layout_height="3sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textTamaño"
            android:text="@string/Borrar"
            android:background="@drawable/fondoc"
            android:id="@+id/btn2"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/card3"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textStyle="bold"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textTamaño"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Resultado"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/textTamaño"
                android:background="@drawable/fondob"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>